test/unit/assets/syntax_error/nif_arity_mismatch.exs
defmodule ZiglerTest.DryRun.NifArityMismatch do
  use Zig

  ~Z"""
  /// nif: foo/1
  fn foo() i32 {
    return 47;
  }
  """
end
